basic toggle function working

--- a/src/style.scss
+++ b/src/style.scss
@@ -71,7 +71,6 @@ body {
 
 .film-title {
   font-size: 14px;
-  text-decoration: underline;
 }
 
 .map-plus-icon {
@@ -89,4 +88,8 @@ body {
 
 .fa-plus-circle {
   color: #0336FF;
+}
+
+.hidden {
+  display: none;
 }
