--- a/src/style.scss
+++ b/src/style.scss
@@ -31,9 +31,9 @@ body {
   width: 100%;
   height: 100%;
   padding: 30px;
-  -webkit-box-shadow: 6px 0px 14px -5px rgba(0,0,0,0.54);
-  -moz-box-shadow: 6px 0px 14px -5px rgba(0,0,0,0.54);
-  box-shadow: 6px 0px 14px -5px rgba(0,0,0,0.54);
+  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  -moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   z-index: 1;
   overflow-y: hidden;
   background-color: #fff;
@@ -49,9 +49,9 @@ body {
   position: absolute;
   top: 0;
   left: 100%;
-  -webkit-box-shadow: 6px 0px 14px -5px rgba(0,0,0,0.54);
-  -moz-box-shadow: 6px 0px 14px -5px rgba(0,0,0,0.54);
-  box-shadow: 6px 0px 14px -5px rgba(0,0,0,0.54);
+  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  -moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   z-index: 1;
 }
 
@@ -92,9 +92,9 @@ body {
 
   &:hover {
     color: #fff;
-    -webkit-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    -moz-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
 }
 
@@ -129,29 +129,27 @@ body {
   -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   -moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  margin-left: 10px;
 
   &:hover {
     color: #fff;
     background-color: $button-hover-color;
-    -webkit-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    -moz-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
 
   &:focus {
     color: #fff;
   }
 
-  &.login{
-    position: fixed;
-    top: 40px;
-    right: 40px;
-  }
-
   &.logout{
-    position: fixed;
-    top: 40px;
-    right: 40px;
     background-color: $secondary-color;
   }
+}
+
+.login-logout-wrapper {
+  position: fixed;
+  top: 40px;
+  right: 40px;
 }
