basic styling to index and show events

--- a/src/style.scss
+++ b/src/style.scss
@@ -93,3 +93,99 @@ body {
 .hidden {
   display: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+h1 {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.film-title {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+// THIS IS TO BE MERGED WITH AN EXISTING CLASS. DUPLICATED TO AVOID MERGING ISSUES.
+
+.location-image {
+  height: 200px;
+}
+
+.level {
+  margin: 10px 0;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.scene-note {
+  margin-top: 10px;
+}
