--- a/src/style.scss
+++ b/src/style.scss
@@ -24,10 +24,24 @@ body {
   }
 }
 
-.sidebar {
+.right-sidebar-wrapper {
   position: absolute;
   top: 0;
-  left: 0;
+  right: -500px;
+  height: 100%;
+  width: 400px;
+  z-index: 6;
+  transform: translateX(0px);
+  transition-property: -webkit-transform,transform,opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: cubic-bezier(0.0,0.0,0.2,1);
+
+  &.open {
+    transform: translateX(-500px);
+  }
+}
+
+.sidebar {
   width: 100%;
   height: 100%;
   padding: 30px;
@@ -143,6 +157,16 @@ body {
   }
 
   &.logout{
+    background-color: $secondary-color;
+  }
+
+  &.right-bar {
+    position: absolute;
+    bottom: 30px;
+    right: 100%;
+    z-index: 4;
+    display: block;
+    margin-right: 10px;
     background-color: $secondary-color;
   }
 }
