--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,8 @@
 $primary-color: #0d47a1;
-$button-hover-color: #1565c0;
+$plus-button-hover-color: #1565c0;
 $secondary-color: #9E9E9E;
+$tertiarycolor: #d50000;
+$close-button-hover-color: #ff5131;
 
 body {
   margin: 0;
@@ -91,7 +93,7 @@ body {
   font-size: 14px;
 }
 
-.map-plus-icon {
+.map-icon {
   position: fixed;
   display: block;
   bottom: 40px;
@@ -109,13 +111,31 @@ body {
     -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
+
+  &.cancel {
+    position: absolute;
+    bottom: 30px;
+    right: 100%;
+    z-index: 4;
+    display: block;
+    margin-right: 10px;
+  }
 }
 
 .fa-plus-circle {
   color: $primary-color;
 
   :hover {
-    color: $button-hover-color;
+    color: $plus-button-hover-color;
+  }
+
+}
+
+.fa-times-circle {
+  color: $tertiarycolor;
+
+  :hover {
+    color: $close-button-hover-color;
   }
 
 }
@@ -146,7 +166,7 @@ body {
 
   &:hover {
     color: #fff;
-    background-color: $button-hover-color;
+    background-color: $plus-button-hover-color;
     -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -157,16 +177,6 @@ body {
   }
 
   &.logout{
-    background-color: $secondary-color;
-  }
-
-  &.right-bar {
-    position: absolute;
-    bottom: 30px;
-    right: 100%;
-    z-index: 4;
-    display: block;
-    margin-right: 10px;
     background-color: $secondary-color;
   }
 }
