--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto|Oswald');
+
 $primary-color: #0d47a1;
 $plus-button-hover-color: #1565c0;
 $secondary-color: #9E9E9E;
@@ -7,6 +9,16 @@ $close-button-hover-color: #ff5131;
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.title, .subtitle {
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 0.5px;
+
+  &.indexTitle {
+    margin-bottom: 2px;
+  }
 }
 
 .sidebar-wrapper {
@@ -189,22 +201,28 @@ body {
   z-index: 4;
 }
 
-.hidden {
+
+// Location index styles
+
+.locationShow {
   display: none;
+
+  &.show {
+    display: block;
+  }
 }
 
-.divider {
-  color: #030303;
+hr.dark-hr {
+background-color: #d8d8d8;
+}
+
+.hidden {
+  display: none;
 }
 
 h1 {
   font-size: 30px;
   font-weight: 700;
-}
-
-.film-title {
-  font-size: 20px;
-  margin-top: 10px;
 }
 
 .level {
