--- a/src/style.scss
+++ b/src/style.scss
@@ -154,19 +154,28 @@ body {
 }
 
 .mapboxgl-popup-content {
-  height: 80px;
-  width: 250px;
+  height: 100px;
+  width: 300px;
 }
 
 .marker-popup-content {
-  height: 60px;
+  height: 100%;
   display: flex;
   flex-direction: row;
 
   img {
-    max-height: 100%;
+    max-height: 90%;
     padding-right: 10px;
   }
+
+  .pop-up-title {
+    margin-bottom: 5px;
+  }
+  .pop-up-films {
+    line-height: 15px;
+  }
+
+
 }
 
 .button {
