Added transition to location show

--- a/src/style.scss
+++ b/src/style.scss
@@ -21,6 +21,8 @@ body {
   }
 }
 
+
+//SIDE BARS ==================================
 .sidebar-wrapper {
   position: absolute;
   top: 0;
@@ -94,18 +96,8 @@ body {
   padding: 12px 10px 10px 10px;
 }
 
-.location-image {
-  height: 200px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-bottom: 10px;
-}
 
-.film-title {
-  font-size: 14px;
-}
-
+// ICONS AND MAP FURNITURE=======================================
 .map-icon {
   position: fixed;
   display: block;
@@ -152,6 +144,15 @@ body {
   }
 }
 
+.login-logout-wrapper {
+  position: fixed;
+  top: 40px;
+  right: 40px;
+  z-index: 4;
+}
+
+
+//MAP POP UP STYLING =====================================
 .mapboxgl-popup-content {
   height: 120px;
   width: 300px;
@@ -173,10 +174,9 @@ body {
   .pop-up-films {
     line-height: 15px;
   }
-
-
 }
 
+//SITE WIDE BUTTONS =======================================
 .button {
   background-color: $primary-color;
   color: #fff;
@@ -202,21 +202,26 @@ body {
   }
 }
 
-.login-logout-wrapper {
-  position: fixed;
-  top: 40px;
-  right: 40px;
-  z-index: 4;
-}
 
-
-// Location index styles
+// LOCATION INDEX STYLES===============================
 
 .locationShow {
-  display: none;
+  height: 0px;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  padding: 10px 15px;
+  opacity: 0;
+  margin-top: 10px;
+  visibility: hidden;
+  -webkit-box-shadow: inset 0px 0px 17px -3px rgba(0,0,0,0.32);
+  box-shadow: inset 0px 0px 17px -3px rgba(0,0,0,0.32);
 
   &.show {
-    display: block;
+    height: 100%;
+    opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -241,4 +246,16 @@ h1 {
 
 .scene-note {
   margin-top: 10px;
+}
+
+.location-image {
+  height: 150px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 10px;
+}
+
+.film-title {
+  font-size: 14px;
 }
