--- a/src/style.scss
+++ b/src/style.scss
@@ -150,6 +150,17 @@ body {
   z-index: 4;
 }
 
+.edit-form-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 500px;
+
+  .label {
+    margin-top: 20px;
+  }
+}
+
 
 //MAP POP UP STYLING =====================================
 .mapboxgl-popup-content {
@@ -198,6 +209,10 @@ body {
 
   &.logout{
     background-color: $secondary-color;
+  }
+
+  &.edit-profile {
+    margin: 0 0 30px 0;
   }
 }
 
