--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,10 @@ $secondary-color: #9E9E9E;
 $tertiarycolor: #d50000;
 $close-button-hover-color: #ff5131;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -89,17 +93,17 @@ figure.image img {
 @media only screen and (max-width: 400px){
   .sidebar-wrapper {
     top: 50%;
-  }
-}
-
-@media only screen and (max-width: 400px){
-  .sidebar-wrapper .sidebar {
     width: 100%;
   }
+
+  // .sidebar-wrapper &.close {
+  //   transform: translateY(-400px);
+  // }
+
+  .sidebar-wrapper .sidebar {
+    // width: 100%;
+  }
 }
-
-
-
 
 .right-sidebar-wrapper {
   position: absolute;
@@ -118,6 +122,16 @@ figure.image img {
   }
 }
 
+@media only screen and (max-width: 400px){
+  .right-sidebar-wrapper {
+    width: 100%;
+    right: -400px;
+    &.open {
+      transform: translateX(-400px);
+    }
+  }
+}
+
 .sidebar {
   width: 100%;
   height: 100%;
@@ -127,6 +141,7 @@ figure.image img {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   z-index: 1;
   overflow-y: hidden;
+  background-color: #fff;
 
   &:hover {
     overflow-y: auto;
@@ -154,6 +169,12 @@ figure.image img {
   top: 8px;
   left: 100%;
   padding: 12px 10px 10px 10px;
+}
+
+@media only screen and (max-width: 400px){
+  .togglebutton {
+    display: none;
+  }
 }
 
 
@@ -184,6 +205,19 @@ figure.image img {
     z-index: 4;
     display: block;
     margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 400px){
+  .map-icon {
+    position: fixed;
+    display: block;
+    bottom: 40px;
+    right: 40px;
+
+    &.cancel {
+      
+    }
   }
 }
 
@@ -218,6 +252,12 @@ figure.image img {
 
   .label {
     margin-top: 20px;
+  }
+}
+
+@media only screen and (max-width: 400px){
+  .edit-form-wrapper {
+    width: 100%;
   }
 }
 
