--- a/src/style.scss
+++ b/src/style.scss
@@ -187,14 +187,23 @@ figure.image img {
 }
 
 @media only screen and (max-width: 400px){
-  .togglebutton {
-    display: inline-block;
+  .togglewrapper {
+    width: 100%;
+    height: 55px;
+    left: 0;
+    background-color: #fff;
+    // z-index: 3;
+  }
+  .togglebutton, {
+    // display: inline-block;
     // position: sticky;
     top: 25px;
     height: auto;
-    left: -360px;
+    // left: -360px;
+    left: 2%;
     padding: 0;
     transform: rotate(90deg);
+    // z-index: 8;
   }
 }
 
