mobile view, and sidebar toggles working and ready to test on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -398,6 +398,14 @@ figure.image img {
   }
 }
 
+// @media only screen and (max-width: 400px) {
+//   .locationShow {
+//     -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75);
+//     -moz-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75);
+//     box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75);
+//   }
+// }
+
 hr.dark-hr {
 background-color: #d8d8d8;
 }
